--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "simple",
     "util",
     "utility",
-    "hydstra"	
+    "hydstra"
   ],
   "version": "1.0.0",
-  "authors": ["Mikeal Rogers <mikeal.rogers@gmail.com>","Sholto Maud <sholto.maud@gmail.com>"],
+  "authors": [
+    "Mikeal Rogers <mikeal.rogers@gmail.com>",
+    "Sholto Maud <sholto.maud@gmail.com>"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/hyds/request-hydstra.git"
@@ -65,5 +68,16 @@
     "tape": "~3.0.0",
     "taper": "~0.4.0",
     "bluebird": "~2.9.21"
-  }
+  },
+  "homepage": "https://github.com/hyds/request-hydstra",
+  "directories": {
+    "example": "examples",
+    "test": "tests"
+  },
+  "keywords": [
+    "http",
+    "request",
+    "hydstra"
+  ],
+  "author": "Sholto Maud"
 }
